[package]
name = "alley"
version = "0.0.0"
description = "局域网文件传输工具"
authors = ["thep0y"]
license = "AGPL-3.0"
repository = "https://github.com/alley-rs/alley-transfer"
edition = "2021"

[lib]
name = "app_lib"
# crate-type = ["staticlib", "cdylib", "rlib", "lib"]
crate-type = ["lib", "cdylib", "staticlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0.0-beta", features = [] }

[dependencies]
tauri = { version = "2.0.0-beta", features = [] }
tauri-plugin-clipboard-manager = "2.1.0-beta.0"
tauri-plugin-shell = "2.0.0-beta.3"
tauri-plugin-dialog = "2.0.0-beta.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5"
lazy_static = "1"
salvo = { version = "0.67", features = ["serve-static"] }
tokio = { version = "1", features = ["macros"] }
tokio-util = "0.7"
local-ip-address = "0.6"
qrcode-generator = "4"
bytes = '1'
futures = "0.3"
time = { version = "0.3", features = ['macros'] }
thiserror = "1"
tracing-subscriber = { version = "0.3", features = [
  'time',
  'env-filter',
  'json',
] }
tracing = { version = "0.1", features = ["log", "release_max_level_info"] }
tracing-appender = '0.2'
rust-embed = "8"

[target."cfg(not(any(target_os = \"android\", target_os = \"ios\")))".dependencies]
tauri-plugin-updater = "2.0.0-beta"


[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort"   # Strip expensive panic clean-up logic
codegen-units = 1 # Compile crates one after another so the compiler can optimize better
lto = true        # Enables link to optimizations
opt-level = "s"   # Optimize for binary size
strip = true      # Remove debug symbols
