[package]
name = "alley"
version = "0.0.0"
description = "局域网文件传输工具"
authors = ["thep0y"]
license = "AGPL-3.0"
repository = "https://github.com/alley-rs/alley-transfer"
edition = "2021"

[lib]
name = "app_lib"
# crate-type = ["staticlib", "cdylib", "rlib", "lib"]
crate-type = ["lib", "cdylib", "staticlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0.0-beta", features = [] }

[dependencies]
tauri = { version = "2.0.0-beta", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5"
lazy_static = "1"
salvo = { version = "0.67", features = ["serve-static"] }
tokio = { version = "1", default-features = false, features = [
  "macros",
  "net",
] }
tokio-util = "0.7"
local-ip-address = "0.6"
qrcode-generator = "4"
bytes = '1'
futures = "0.3"
time = { version = "0.3", features = ['macros'] }
thiserror = "1"
tracing-subscriber = { version = "0.3", features = [
  'time',
  'env-filter',
  'json',
] }
tracing = { version = "0.1", features = ["log", "release_max_level_info"] }
rust-embed = "8"
hostname = "^0.4"
os_info = { version = "3", default-features = false }
once_cell = "1"
tauri-plugin-os = "2.0.0-beta.3"

[target."cfg(any(target_os = \"windows\", target_os = \"macos\", target_os = \"linux\"))".dependencies]
tracing-appender = '0.2'
tauri-plugin-updater = "2.0.0-beta" # 这个插件不支持手机

# 下面三个插件未完成对手机的适配，暂时不编译到手机端
tauri-plugin-clipboard-manager = "2.1.0-beta.0"
tauri-plugin-shell = "2.0.0-beta.3"
tauri-plugin-dialog = "2.0.0-beta.4"

[target."cfg(target_os = \"android\")".dependencies]
file-picker-android = { git = "https://github.com/Berrysoft/file-picker-android" }
tauri-plugin-barcode-scanner = "2.0.0-beta.4"


[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort"   # Strip expensive panic clean-up logic
codegen-units = 1 # Compile crates one after another so the compiler can optimize better
lto = true        # Enables link to optimizations
opt-level = "s"   # Optimize for binary size
strip = true      # Remove debug symbols
