[package]
name = "fluxy"
version = "0.0.0"
description = "局域网文件传输工具"
authors = ["thep0y"]
license = "AGPL-3.0"
repository = "https://github.com/alley-rs/alley-transfer"
edition = "2021"

[lib]
name = "fluxy_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2.0.0-rc", features = [] }

[dependencies]
tauri = { version = "2.0.0-rc", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5"
lazy_static = "1"
salvo = { version = "0", features = ["serve-static"] }
tokio = { version = "1", default-features = false, features = [
    "macros",
    "net",
] }
tokio-util = "0.7"
local-ip-address = "0.6"
qrcode-generator = "4"
bytes = '1'
futures = "0.3"
time = { version = "0.3", features = ['macros'] }
thiserror = "1"
tracing-subscriber = { version = "0.3", features = [
    'time',
    'env-filter',
    'json',
] }
tracing = { version = "0.1", features = ["log", "release_max_level_info"] }
rust-embed = "8"
hostname = "^0.4"
os_info = { version = "3", default-features = false }
once_cell = "1"
sha1 = "0"
tauri-plugin-os = "2.0.0-rc"

[target."cfg(any(target_os = \"windows\", target_os = \"macos\", target_os = \"linux\"))".dependencies]
tracing-appender = '0.2'
tauri-plugin-updater = "2.0.0-rc.0" # 这个插件不支持手机

# 下面三个插件未完成对手机的适配，暂时不编译到手机端
tauri-plugin-clipboard-manager = "2.0.0-rc.0"
tauri-plugin-shell = "2.0.0-rc.0"
tauri-plugin-dialog = "2.0.0-rc.0"

[target."cfg(target_os = \"android\")".dependencies]
# file-picker-android = { git = "https://github.com/Berrysoft/file-picker-android" }
tauri-plugin-barcode-scanner = "2.0.0-rc.0"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
